# simba

./: .dockerignore  .editorconfig  .env.rabbitmq  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.develop.yml  docker-compose.master.yml  docker-compose.prod.yml  docker-compose.workers.yml  docker-compose.yml  package-lock.json  precommit-back.sh  rundev-back.sh  rundev-front.2.sh  rundev-front.sh  rundev-workers.sh  wait-for
backend/: .gitignore  add_old_btc_txs.py  commands.py  delete_dublicates.py  delete_webhooks.py  main.py  pyproject.toml  requirements.txt  sync_btc_wallets.py  test.py  test2.py  test3.py  test_btc_wallet.json  test_child_wallets.json  txs_data.json  update_btc_address.py
backend/api/: dependencies.py  routes.py
backend/celery/: celeryconfig.py
backend/celery_app/: __init__.py  celery_config.py  celeryconfig.py
backend/config/: __init__.py  app_settings.py  celery.py  common.py  configurator.py  crypto.py  db.py  email.py  provider.py  sentry.py  simba_abi.json  simba_abi_mainnet.json  simba_abi_rinkeby.json  sst_abi_mainnet.json  sst_abi_rinkeby.json
backend/core/: __init__.py
backend/database/: db_events.py  init.py
backend/schemas/: __init__.py  base.py  blockcypher_webhooks.py  btc_address.py  btc_transaction.py  btc_xpub.py  eth_contract.py  eth_transaction.py  invoice.py  meta.py  referral.py  transparency.py  user.py  user_addresses_archive.py  user_kyc.py
backend/templates/: recover.html  support-btc-warning.html  support-hot-wallet.html  support-invoice-stuck.html  (+2 more)
(+312 files in other folders)
