[tool.poetry]
name = "simba-core"
version = "0.1.0"
description = ""
authors = ["elastoo"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.58.0"
motor = "^2.3.0"
passlib = "^1.7.4"
pycoin = "^0.90.20201031"
pydantic = "^1.7.3"
PyJWT = "^2.0.0"
pyotp = "^2.4.1"
sentry-sdk = "^0.19.5"
ujson = "^4.0.1"
uvicorn = "0.11.8"
uvloop = "^0.14.0"
blockcypher = "^1.0.90"
httpx = "^0.17.0"
Jinja2 = "^2.11.2"
sitri = "^0.10.27"
hvac = "^0.10.6"
tenacity = "^6.3.1"
bcrypt = "^3.2.0"
websockets = "^8.1"
faust = "^1.10.4"
web3 = "5.11.0"
XlsxWriter = "^1.3.7"
requests = "^2.25.1"
ethereum-gasprice = "^1.3.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
